gitops/examples/podinfo/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
spec:
  selector:
    app.kubernetes.io/name: podinfo
  ports:
    - name: http
      port: 9898
      targetPort: http
