gitops/examples/podinfo/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  parentRefs:
    - name: demo-gateway
      sectionName: http
  hostnames:
    - demo.lab.home.arpa
  rules:
    - backendRefs:
        - name: podinfo
          port: 9898
